--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -512,7 +512,7 @@ The present findings extend earlier research on teaching-related action modulati
 \hypertarget{acknowledgements}{%
 \section{Acknowledgements}\label{acknowledgements}}
 
-This research was supported by the European Research Council under the European Union's Seventh Frame- work Program (FP7/2007--2013)/ERC Grant agreement no. 609819, SOMICS, and by ERC Grant agreement no. 616072, JAXPERTISE. We thank Dávid Csűrös for his help with data collection.
+This research was supported by the European Research Council under the European Union's Seventh Framework Program (FP7/2007--2013)/ERC Grant agreement no. 609819, SOMICS, and by ERC Grant agreement no. 616072, JAXPERTISE. We thank Dávid Csűrös for his help with data collection.
 
 \hypertarget{author-contributions}{%
 \section{Author contributions}\label{author-contributions}}
@@ -539,7 +539,7 @@ The authors declare no competing interests.
 
 In the teaching condition, participants were shown the following instruction on a computer monitor (Italic sentences were highlighted in yellow colour on a black background): ``Now, play what you practised as if you were teaching it to students. Students already know how to produce the sequence of the tones and now are trying to \emph{learn how to perform the piece expressively} by listening to your performance. \emph{Do your best as a teacher to produce the piece according to the notation that you just practised.}''
 
-In the performing condition, participants were shown the following instruction on a computer monitor monitor: ``Now, play what you practised as if you were performing it to an audience. \emph{Do your best as a performer to produce the piece according to the notation that you just practised.}''
+In the performing condition, participants were shown the following instruction on a computer monitor: ``Now, play what you practised as if you were performing it to an audience. \emph{Do your best as a performer to produce the piece according to the notation that you just practised.}''
 
 \hypertarget{instructions-experiment-2}{%
 \subsection{Instructions (Experiment 2)}\label{instructions-experiment-2}}
